--- a/Latihan4.html
+++ b/Latihan4.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Review Film</title>
-	<link rel="icon" href="/Latihanweb/images/icon1.jpg">
+	<link rel="icon" href="/tugasweb2/images/icon1.jpg">
 </head>
 <body style="background-color: bisque;">
 	<h1 style="text-align: center; background-color: #bb4000;">Review Film</h1>
@@ -12,11 +12,11 @@
 	<p style="text-align: justify;">Setelah selang setahun lamanya, film ketiga dari trilogi The Hobbit yang diadaptasi dari novel berjudul sama karya J.R.R. Tolkien kini telah tayang di bioskop Tanah Air mulai Rabu, 17 Desember 2014 kemarin. Film ketiga ini merupakan konklusi dari kisah The Hobbit, sekaligus pembuka untuk trilogi kisah Middle Earth sebelumnya, Lord of The Rings. Konklusi akhir seperti apakah yang ditawarkan dalam film The Hobbit: The Battle of Five Armies ini?</p>
 	<hr>
 	<h4 style="text-align: center; background-color: #eab676;">Perang Besar Pun Dimulai</h4>
-	<p style="text-align: justify;"> <img src="\Latihanweb\images\hobbit.jpg" width="300px" height="160px" style="float: left; margin: 5px"> Film The Hobbit: The Battle of Five Armies dimulai dari akhir film sebelumnya, The Hobbit: Desolation of Smaug. Adegan dibuka dengan bagaimana sang naga Smaug terbang dari Erebor menuju Laketown untuk menghancurkannya, sementara Bilbo dan kawanan Dwarf hanya bisa memandang dari jauh kekejaman yang dihasilkan oleh Smaug pada kota tersebut. Dalam kekacauan tersebut, Bard yang masih di dalam penjara berhasil keluar dan melawan Smaug, dengan akhir di mana dirinya berhasil mengalahkan sang naga dan menyelamatkan sebagian penduduk Laketown.</p>
+	<p style="text-align: justify;"> <img src="\tugasweb2\images\hobbit.jpg" width="300px" height="160px" style="float: left; margin: 5px"> Film The Hobbit: The Battle of Five Armies dimulai dari akhir film sebelumnya, The Hobbit: Desolation of Smaug. Adegan dibuka dengan bagaimana sang naga Smaug terbang dari Erebor menuju Laketown untuk menghancurkannya, sementara Bilbo dan kawanan Dwarf hanya bisa memandang dari jauh kekejaman yang dihasilkan oleh Smaug pada kota tersebut. Dalam kekacauan tersebut, Bard yang masih di dalam penjara berhasil keluar dan melawan Smaug, dengan akhir di mana dirinya berhasil mengalahkan sang naga dan menyelamatkan sebagian penduduk Laketown.</p>
 	<p  style="text-align: justify;">Dengan matinya sang naga Smaug, maka berita megenai Erebor yang telah bebas dari naga pun mulai tersebar di seluruh penjuru Middle Earth. Pasukan Elf yang dipimpin oleh Thranduil datang untuk memberikan bantuan kepada warga Laketown sekaligus ingin berkonfrontasi dengan Thorin, bekerja sama dengan Bard agar ia mau menepati janji yang sebelumnya telah ia ucapkan bahwa setelah mengambil kembali Erebor, maka Thorin akan memberikan sebagian dari harta yang terdapat di dalam benteng tersebut.Dalam perdebatan tersebut, bahaya baru mulai mengancam dan mereka pun harus mulai bersiap-siap karena Gandalf yang kembali di hadapan mereka mengatakan bahwa akan ada pasukan Orc menyerang untuk membinasakan mereka semua.</p>
 	<hr>
 	<h4 style="text-align: center; background-color: #eab676;">Akhir dari Trilogi The Hobbit, Awal untuk Lord of The Rings</h4>
-	<p style="text-align: justify;"> <img src="\Latihanweb\images\hobbit1.jpg" style="float: right; margin: 5px; " width="300px" height="200px">Seperti yang diketahui sebelumnya, trilogi film The Hobbit ini adalah awal sebelum peristiwa dalam film trilogi Lord of The Rings dimulai. Dan harus diakui, seperti akhir dari kisah Lord of The Rings beberapa waktu silam, film The Hobbit: The Battle of Five Armies ini ditutup dengan perang yang cukup epik.Berbeda dari dua film sebelumnya, The Hobbit: The Battle of Five Armies menawarkan porsi adegan aksi dan perang yang pastinya jauh lebih banyak ketimbang sebelumnya. Tidak ada kilas balik yang benar-benar mengisyaratkan akan apa yang telah terjadi di film pertama maupun film keduanya, sehingga kemungkinan besar Anda harus menontonnya sendiri daripada berharap akan dijelaskan lebih rinci di film ketiga ini. Perkembangan karakter yang terjadi di dalam film The Hobbit: The Battle of Five Armies pun juga tidak sedalam yang ada pada dua film sebelumnya, kecuali perkembangan beberapa karakter yang memang menjadi fokus utama seperti Thorin atau Bilbo.</p>
+	<p style="text-align: justify;"> <img src="\tugasweb2\images\hobbit1.jpg" style="float: right; margin: 5px; " width="300px" height="200px">Seperti yang diketahui sebelumnya, trilogi film The Hobbit ini adalah awal sebelum peristiwa dalam film trilogi Lord of The Rings dimulai. Dan harus diakui, seperti akhir dari kisah Lord of The Rings beberapa waktu silam, film The Hobbit: The Battle of Five Armies ini ditutup dengan perang yang cukup epik.Berbeda dari dua film sebelumnya, The Hobbit: The Battle of Five Armies menawarkan porsi adegan aksi dan perang yang pastinya jauh lebih banyak ketimbang sebelumnya. Tidak ada kilas balik yang benar-benar mengisyaratkan akan apa yang telah terjadi di film pertama maupun film keduanya, sehingga kemungkinan besar Anda harus menontonnya sendiri daripada berharap akan dijelaskan lebih rinci di film ketiga ini. Perkembangan karakter yang terjadi di dalam film The Hobbit: The Battle of Five Armies pun juga tidak sedalam yang ada pada dua film sebelumnya, kecuali perkembangan beberapa karakter yang memang menjadi fokus utama seperti Thorin atau Bilbo.</p>
 	<p  style="text-align: justify;">Secara visual animasi, tak dapat dielakkan lagi bahwa film The Hobbit: The Battle of Five Armies menawarkan visual yang indah dan menawan, membuat tiap adegan di dalam film tersebut terasa nyata dan lebih epik. Alur kisah dan drama yang terdapat dalam film ini memang lebih cenderung serius hingga akhir, tapi penonton tetap disuguhkan beberapa adegan yang cukup menggelitik perut. Tak tertinggal juga bahwa alur kisah yang dibawakan dalam The Hobbit: The Battle of Five Armies juga bisa memainkan sedikit emosi penontonnya. The Hobbit: The Battle of Five Armies nampaknya cukup layak untuk menjadi salah satu film yang bisa disaksikan sebelum tahun 2014 berganti menjadi 2015. Film ketiga dari trilogi The Hobbit ini bisa menjadi penutup yang manis jika Anda adalah fans atau minimal menikmati kisah Middle Earth karangan J.R.R. Tolkien. Perlu ditekankan sekali lagi, bagi Anda yang belum sempat menonton film The Hobbit: An Unexpected Journey dan The Hobbit: Desolation of Smaug, sangat disarankan untuk menonton kedua film tersebut lebih dulu untuk mengatasi kebingungan yang mungkin akan terjadi ketika hendak menonton The Hobbit: The Battle of Five Armies.
 
 </p> 
@@ -73,9 +73,9 @@
 	<li>The Hobbit: The Desolation of Smaug (2013)</li>
 	<li>The Hobbit: The Battle of The Five Armies (2014)</li>
 </ol>
-<img src="\Latihanweb\images\hobbit2.jpg" width="430px" height="220px" style="padding: 8px;">
-<img src="\Latihanweb\images\hobbit3.jpg" width="430px" height="220px" style="padding: 8px;">
-<img src="\Latihanweb\images\hobbit4.jpg" width="430px" height="220px" style="padding: 8px;">
+<img src="\tugasweb2\hobbit2.jpg" width="430px" height="220px" style="padding: 8px;">
+<img src="\tugasweb2\hobbit3.jpg" width="430px" height="220px" style="padding: 8px;">
+<img src="\tugasweb2\hobbit4.jpg" width="430px" height="220px" style="padding: 8px;">
 
 <style>
 	#review {
@@ -136,11 +136,11 @@
 
 <p style="margin: 10px;">Cuplikan Video</p>
 <video controls>
-	<source src="\Latihan\images\video1.mp4" type="video/mp4"></video>
+	<source src="\tugasweb2\video1.mp4" type="video/mp4"></video>
 </div>
 <div>
 <p style="margin: 10px;">Soundtrack</p>
-<audio controls> <source src="\Latihanweb\images\audio.mp3" type="audio/mp3"></audio>
+<audio controls> <source src="\tugasweb2\audio.mp3" type="audio/mp3"></audio>
 </div>
 
 
