--- a/Latihan4.html
+++ b/Latihan4.html
@@ -31,6 +31,10 @@
 		padding-left: 30px;
 		padding-right: 30px;
 	}
+	@media (max-width: 800px) {
+            .container {
+                width: 100%;
+                height: auto             }
 
 
 	tr:hover {background-color: beige;}
