--- a/Latihan4.html
+++ b/Latihan4.html
@@ -168,6 +168,6 @@
 	</tr>	
 </table>
 
-<p style="text-align: center;"><i>Sekian, terima kasih </i></p>
+<p style="text-align: center;" background-color: #eab676"><i>Sekian, terima kasih </i></p>
 </body>
 </html>
